# ulanzi-deck-d200-plugin-example

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ULANZI-SDK-RESEARCH.md  package.json  pnpm-lock.yaml
.agent/vision/: 2026-03-14-ecosystem-integration.md
.claude/skills/ulanzi-button/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
.plan/: BACKLOG.md
ulanzi-demos/: SPEC-A-plugin-sdk.md  SPEC-B-direct-access.md
ulanzi-demos/plugins/demo/com.ulanzi.demo.ulanziPlugin/: .prettierignore  README.md  en.json  eslint.config.mjs  manifest.json  package.json  pnpm-lock.yaml
ulanzi-demos/plugins/demo/com.ulanzi.demo.ulanziPlugin/plugin/: app.html  app.js
ulanzi-demos/plugins/demo/com.ulanzi.demo.ulanziPlugin/scripts/: generate-icons.mjs
ulanzi-demos/plugins/demo/com.ulanzi.demo.ulanziPlugin/tests/: CalendarAction.test.js  ClockAction.test.js  CounterAction.test.js  (+4 more)
ulanzi-demos/plugins/demo/io.zentala.ulanzideck.demo.ulanziPlugin/: README.md  eslint.config.mjs  jsconfig.json  manifest.json  package.json  pnpm-lock.yaml
ulanzi-demos/shell/demo/: README.md  push.sh  requirements.txt
ulanzi-demos/shell/demo/src/: adb_helper.py  display.py  frames.py
ulanzi-demos/usb/demo/: README.md  pyproject.toml
ulanzi-demos/usb/demo/src/demo/: __init__.py  dashboard.py  icons.py  main.py
ulanzi-demos/usb/demo/tests/: test_dashboard.py  test_icons.py  test_main.py
(+42 files in other folders)
